@@ -4,6 +4,7 @@
   * Also look for getopt_long in libgnugetopt.
   * Properly handle par2 files with the first packet(s) damaged.
   * Give incomplete par/par2 files less weight when choosing which to get.
+  * Consider incomplete par2 files even if -i isn't specified.
 
 2003-10-04 v0.24.2:
   * Use gcc's automatic dependancy generation rather than a seperate depend rule.
